--- a/gb/21/2/10/n12744350.md
+++ b/gb/21/2/10/n12744350.md
@@ -1,6 +1,6 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/unusjz360/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/unusjz360/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/unusjz360/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/unusjz360/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/unusjz360/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/unusjz360/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/unusjz360/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/unusjz360/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/unusjz360/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/unusjz360/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/unusjz360/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/unusjz360/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/unusjz360/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/unusjz360/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/unusjz360/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/unusjz360/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/unusjz360/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/unusjz360/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/unusjz360/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/unusjz360/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/unusjz360/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/unusjz360/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/unusjz360/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/unusjz360/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/unusjz360/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/unusjz360/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/unusjz360/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/unusjz360/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/unusjz360/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/unusjz360/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/unusjz360/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/unusjz360/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/unusjz360/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/unusjz360/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/unusjz360/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/unusjz360/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/unusjz360/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/unusjz360/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/unusjz360/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/unusjz360/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/unusjz360/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/unusjz360/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/unusjz360/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/unusjz360/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/unusjz360/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/unusjz360/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/unusjz360/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>中共海外舆论操纵手法大曝光 西方如何应对</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/09/ffbb298fdaf8bf5a9bf6d14c7c2cbd2f-600x400.jpg" />
 <h6>中共“大外宣”统战手法推陈出新，除渗透、收买媒体外，近年又推出整合图像、影音、动画的“融媒体”传播红色声音。（MARK RALSTON/AFP via Getty Images）
@@ -8,6 +8,9 @@
 <hr>
 	<p>【大纪元2021年02月10日讯】（大纪元记者宋唐编译报导）冷战时代，中共政权没有机会在民主国家内部活动，随着全球化的到来，过去10年来，中共已成为全球媒体市场不会缺席的参与者。使得中共有机会在民主国家内采取宣传、审查、操纵媒体与舆论行动。</p>
 <p>一份最新报告揭示了中共海外操纵舆论和媒体渗透的层层黑幕和手段，并给出全球应对中共威胁的建议。</p>
+<p><strong>听新闻：</strong></p>
+<div style="width: 100%; height: 170px; margin-bottom: 20px; border-radius: 10px; overflow: hidden;"><a style="width: 100%; height: 170px;" src="https://player.captivate.fm/episode/96885872-97c0-4c40-9e6d-4498dd4e2f23" width="300" b="150" frameborder="no" scrolling="no" seamless=""></a></div>
+<p><strong>（听更多请至<ahref="https://github.com/hxcaik307/djy/blob/master/gb/podcast.md#1">“听纪元”</a>平台）</strong></p>
 <p>近日，美国国家民主基金会（National Endowment for Democracy, NED）发布了“锐实力与民主如何抵制”（the sharp power and democratic resilience series）系列报告，提出在以下四个领域抵制中共：对民主社会言论自由和媒体环境的威胁，对科研领域的威胁，技术的管理，国家资本对政治的腐蚀。目前，已发布了7份报告。</p>
 <p>在最新一份题为“中共媒体的全球足迹：民主对不断扩大的威权主义影响力回应”（China’s Global Media Footprint: Democratic Responses to Expanding Authoritarian Influence）的报告中，作者莎拉?库克（Sarah Cook）表示：在过去10年里，中共全球塑造话语权的努力正急剧扩大，采用多种语言，影响到世界的每个地区，利用宣传、散布假信息、信息审查和控制媒体和基础设施等手段。这些努力不仅仅局限于“讲好中国故事”，其锋芒所至之处，往往会破坏民主规范，侵蚀国家主权，削弱独立媒体，并违反当地法律。没有一个国家能够幸免，不管是贫穷脆弱的国家，还是富裕的民主大国。</p>
 <p>报告中说，中共虽然有资源优势，但其成功也得益于民主社会内部不容忽视的漏洞。中共对新闻的控制采取全社会都动员起来的方式（whole-of-society approach），民主社会要想有效抵制，也必须采取全社会动员的方式回应，研究机构、媒体、科技公司以及民间团体都要积极参与，把抵制中共信息控制纳入自己工作的主流。</p>
@@ -47,17 +50,17 @@
 <p>从马来西亚、蒙古到澳大利亚和加拿大，越来越多地外国人，也在使用微信，这也为今后中共在竞选活动或干预选举中散布虚假信息，打下了基础。</p>
 <p>另外，2020年8月，路透社报导，在印尼有数百万人在使用新闻应用Baca Berita，这个属中国字节跳动公司（ByteDance）所有，从2018年到2020年中，该公司北京总部指示，对Baca Berita上发布的批评中共政府的文章进行审查，受审查的内容包括“天安门”和“毛泽东”，中国和印尼在南海问题上的紧张关系，以及TikTok被美国禁用。</p>
 <h2>二、中共利用了民主社会的漏洞</h2>
-<p>北京的媒体对其他国家媒体的影响越来越大，得益于一个简单的事实，即在过去20年，中国成为全球大国。在2000年，中国是第六大经济体，互联网用户只有2200万。它现在是世界上第二大经济体，并拥有迄今为止最多的互联网用户，有超过9亿人。</p>
+<p>北京的媒体对其它国家媒体的影响越来越大，得益于一个简单的事实，即在过去20年，中国成为全球大国。在2000年，中国是第六大经济体，互联网用户只有2200万。它现在是世界上第二大经济体，并拥有迄今为止最多的互联网用户，有超过9亿人。</p>
 <p>中共显然拥有一些重要资产，但其成功也得益于民主和半民主国家内部不容忽视的漏洞。</p>
 <p>由于市场和技术发生变化，传统媒体出现财务危机，使其更易于接受付费广告，或将股份出售给与中共政府关系密切的公司或个人。也很难拒绝如新华社等中共官媒合作，刊登其免费新闻。媒体对广告收入的依赖，也给中共外交官和公司通过出资做广告，或威胁企业不要在中共不喜欢的媒体上登广告，施加影响的机会。很少有外国政府一直愿意被禁止进入中国市场或受到不登广告的处罚，而带来的经济损失。</p>
-<p>在世界许多地方，当地政治家、记者、智囊团和公民社会对中共缺乏专业了解，包括对中共中宣部控制新闻，以及中共统战部推进对外合作等，这有利于北京。相比之下，中共官媒和外交官对所在国的了解水平，呈指数级上升。中共媒体可以用更加隐蔽的方法，利用民主政治制度的漏洞，针对当地的受众有针对性的传递信息。</p>
+<p>在世界许多地方，当地政治家、记者、智囊团和公民社会对中共缺乏专业了解，包括对中共中宣部控制新闻，以及中共统战部推进对外合作等，这有利于北京。相比之下，中共官媒和外交官对所在国的了解水平，呈指数级上升。中共媒体可以用更加隐蔽的方法，利用民主政治制度的漏洞，针对当地的受众有针对性地传递信息。</p>
 <p>在有大量华侨华人的国家，中共政府往往得以控制当地的中文媒体。另外，中国的微信等应用，在当地华侨华人和本地人中，有大量的用户，这给了操纵政治议题或选举的可能性。</p>
 <p>在拉丁美洲、中东或非洲，这些国家的普通民众反美或反西方的情绪较高，华盛顿及其盟友对中共的警告，在这些国家不起作用。例如，他们可能会说，Facebook不也和TikTok一样，向第三方出售用户数据，或法国、英国和美国不也都曾资助过外国媒体的活动，尽管这些活动与中共的存在着根本的差异。</p>
 <h3>三、民主国家如何抵制</h3>
 <h3>世界抵制的声音越来越大</h3>
 <p>过去10年来发生在世界各地的数百起事件一再表明，任何市场都不会因为太小，而被中共放过。</p>
 <p>一旦中共或与中共关系密切的公司、媒体或所有者，在信息传播渠道中占据了一席之地，操纵信息的努力就不可避免地随之而来。这种情况可能不会立即发生，但会随着时间的推移而演变，或者一旦出现对北京有足够意义事情，就会立即启动。届时，中共领导人、外交官和其它与国家有关联的行为者，会毫不犹豫地利用之前获得的经济和政治杠杆，来推行他们的意愿。</p>
-<p>中共媒体影响力正在更深入地扩展到其他国家社会内部事务中，无论是流亡者和难民、侨民社区、投资交易，还是选举。随着这种扩张的继续，北京在外国民主国家的日常生活和决策领域的影响也会相应增加，随之而来的是中共将公共辩论推向自己希望的方向。</p>
+<p>中共媒体影响力正在更深入地扩展到其它国家社会内部事务中，无论是流亡者和难民、侨民社区、投资交易，还是选举。随着这种扩张的继续，北京在外国民主国家的日常生活和决策领域的影响也会相应增加，随之而来的是中共将公共辩论推向自己希望的方向。</p>
 <p>回顾最近的全球发展，可以发现，旨在对抗北京媒体影响和保护民主制度的宣传、专业知识、决策、立法和其它抵制活动也越来越多。</p>
 <p>例如：<br />
 1. 《每日电讯报》、《经济学人》、《纽约时报》和《华盛顿邮报》都终止了中共付费插页。<br />
@@ -93,41 +96,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/unusjz360/djy/blob/master/gb/18/12/9/n10900318.md#1">魔鬼在统治着我们的世界(26)：全球野心(上)</a></li>
-<li><a href="https://github.com/unusjz360/djy/blob/master/gb/21/2/5/n12735990.md#1">CGTN摘牌 赵立坚胡锡进狂骂 BBC回应</a></li>
-<li><a href="https://github.com/unusjz360/djy/blob/master/gb/21/2/7/n12738096.md#1">【横河观点】英国停CGTN 中共大外宣严重受挫</a></li>
-<li><a href="https://github.com/unusjz360/djy/blob/master/gb/21/2/13/n12751008.md#1">公共情妇李薇握有中共高官不可告人秘密</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900318.md#1">魔鬼在统治着我们的世界(26)：全球野心(上)</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/2/5/n12735990.md#1">CGTN摘牌 赵立坚胡锡进狂骂 BBC回应</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/2/7/n12738096.md#1">【横河观点】英国停CGTN 中共大外宣严重受挫</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616056.md#1">大陆主持人谈铁链女及乌俄战争 微博被封</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/unusjz360/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/30/n10009267.md#1" target="_blank">林辉：相声演员马三立苦涩的“逗你玩”人生</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/16/n11726522.md#1" target="_blank">见证生命奇迹 感悟幸福荣耀</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/23/n10418231.md#1" target="_blank">晓明：一个枪口余生者的人生之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/14/4/15/n4132079.md#1" target="_blank">从唐山义女“探父蒙难”看古今对比</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/unusjz360/djy/blob/master/gb/17/12/29/n10005600.md#1">【西游义趣】之一：神秘的樵夫</a></li>
-<li><a href="https://github.com/unusjz360/djy/blob/master/gb/21/2/10/n12745735.md#1">【解密时分】教宗预言：末日审判将近？</a></li>
-<li><a href="https://github.com/unusjz360/djy/blob/master/gb/21/2/8/n12741216.md#1">【解密时分】诺查丹玛斯预言苏共或中共政权？</a></li>
-<li><a href="https://github.com/unusjz360/djy/blob/master/gb/21/2/5/n12734415.md#1">中国新年：回溯辛丑三百年 危难中寻曙光</a></li>
-<li><a href="https://github.com/unusjz360/djy/blob/master/gb/21/2/6/n12737563.md#1">【远见快评】神秘预言4度惊现正史 预告霸王出</a></li>
-<li><a href="https://github.com/unusjz360/djy/blob/master/gb/21/2/12/n12749482.md#1">大陆民众给法轮功创始人拜年 送上新春祝福</a></li>
-<li><a href="https://github.com/unusjz360/djy/blob/master/gb/21/2/9/n12743509.md#1">【大话西油】一代宗师（下）：永恒的拿破仑</a></li>
-<li><a href="https://github.com/unusjz360/djy/blob/master/gb/21/2/13/n12750442.md#1">【拍案惊奇】传缅军断网借刀华为 人民币斗美元？</a></li>
-<li><a href="https://github.com/unusjz360/djy/blob/master/gb/21/2/10/n12745615.md#1">赵丽颖新剧杀青照曝光 瘦的令人震惊</a></li>
-<li><a href="https://github.com/unusjz360/djy/blob/master/gb/21/2/11/n12747190.md#1">【新闻大家谈】拜习通话谁让步？世卫突改口</a></li>
-<li><a href="https://github.com/unusjz360/djy/blob/master/gb/21/2/11/n12746106.md#1">拜登和习近平首次通话 谈了什么</a></li>
-<li><a href="https://github.com/unusjz360/djy/blob/master/gb/21/2/10/n12745615.md#1">赵丽颖新剧杀青照曝光 瘦的令人震惊</a></li>
-<li><a href="https://github.com/unusjz360/djy/blob/master/gb/21/2/11/n12747753.md#1">林青霞仨女新年收特大红包 金额曝光惊呆网友</a></li>
-<li><a href="https://github.com/unusjz360/djy/blob/master/gb/21/2/10/n12745090.md#1">31组艺人接力表演 台湾《红白》陪观众围炉</a></li>
-<li><a href="https://github.com/unusjz360/djy/blob/master/gb/21/2/10/n12745837.md#1">61岁钟楚红晒照庆生 网友大赞冻龄外表</a></li>
-<li><a href="https://github.com/unusjz360/djy/blob/master/gb/21/2/11/n12747378.md#1">孙俪晒手写春联迎新年 网友喊话邓超跟着学</a></li>
-<li><a href="https://github.com/unusjz360/djy/blob/master/gb/21/2/11/n12747555.md#1">飞水很多人做错了 5招给肉类去腥味</a></li>
-<li><a href="https://github.com/unusjz360/djy/blob/master/gb/21/2/10/n12744939.md#1">坚果热量排名 哪个最高？3类人少吃坚果</a></li>
-<li><a href="https://github.com/unusjz360/djy/blob/master/gb/21/2/11/n12746195.md#1">【重播】2021年不想犯太岁 几件事千万别做</a></li>
-<li><a href="https://github.com/unusjz360/djy/blob/master/gb/21/2/11/n12747322.md#1">让头发变黑就喝这碗 4种鸡汤补气又补血</a></li>
-<li><a href="https://github.com/unusjz360/djy/blob/master/gb/21/2/10/n12744565.md#1">【重播】医师秘笈大公开 年菜防疫食材怎么选</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615078.md#1">刘凯文：香港抗疫政策混乱 遗体滞留急症室</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614595.md#1">【直播】俄乌大战 拜登首次国情咨文演说</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/unusjz360/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/unusjz360/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/2/10/n12744350.htm">中共海外舆论操纵手法大曝光 西方如何应对</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/2/10/n12744350.htm">中共海外舆论操纵手法大曝光 西方如何应对</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/unusjz360/djy/blob/master/gb/21/2/10/n12744350.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/unusjz360/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/unusjz360/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/unusjz360/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/unusjz360/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/unusjz360/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/unusjz360/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/unusjz360/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/unusjz360/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/unusjz360/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/unusjz360/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/unusjz360/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/unusjz360/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/unusjz360/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/unusjz360/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/unusjz360/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/unusjz360/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/unusjz360/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/unusjz360/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/unusjz360/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/unusjz360/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/unusjz360/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/unusjz360/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/unusjz360/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/unusjz360/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/unusjz360/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/unusjz360/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/unusjz360/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/unusjz360/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/unusjz360/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/unusjz360/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/unusjz360/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/unusjz360/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/unusjz360/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/unusjz360/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/unusjz360/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/unusjz360/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/unusjz360/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/unusjz360/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/unusjz360/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/unusjz360/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/unusjz360/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/unusjz360/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/unusjz360/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/unusjz360/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/unusjz360/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/unusjz360/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/unusjz360/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/unusjz360/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/21/2/10/n12744350.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
